Bug 452560 - Replace Deploy and Deploy As Buttons with a Run Bar - Trivial: revert change to vertical alignment of global .dropdownArrowDown class and apply it specifically to the launch configurations button

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme.css
@@ -547,7 +547,7 @@ a.breadcrumb.currentLocation {
 
 .dropdownArrowDown {
 	display: inline-block;
-	vertical-align: baseline;
+	vertical-align: top;
 	line-height: 12px;
 	color: #555;
 }
