--- a/bundles/org.eclipse.orion.client.ui/web/orion/widgets/projects/RunBar.css
+++ b/bundles/org.eclipse.orion.client.ui/web/orion/widgets/projects/RunBar.css
@@ -25,6 +25,10 @@
 	width: 250px;
 }
 
+.launchConfigurationsButton > .dropdownArrowDown {
+	vertical-align: baseline;
+}
+
 .launchConfigurationsWrapper > .dropdownMenuOpen {
 	min-width: 160px;
 }
